# nonebot-plugin-ernie

./: .gitignore  LICENSE  README.md  pyproject.toml
nonebot_plugin_ernie/: __init__.py  config.py  utils.py
nonebot_plugin_wenxin/: __init__.py  config.py
