[tool.poetry]
name = "nonebot-plugin-ernie"
version = "0.2.1"
description = "文心一言 Nonebot 插件"
authors = ["Noctulus <fangyuhao0612@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Noctulus/nonebot_plugin_ernie"
packages = [
    { include = "nonebot_plugin_ernie/*.py"}
]

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = "^2.0.0-beta.1"
aiohttp = "^3.8.5"
requests = "^2.31.0"
nonebot-plugin-apscheduler = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
